@@ -6,6 +6,7 @@ March 2021 7.5
    -> Self registration: support custom mail attributes and from constant value (149)
    -> MIT Kerberos: check Kerberos password policy on password change, better error handling
    -> Self Service: new field to show user's quota values
+   -> Self Service: allow to create Unix home directory during registration
 
 
 06.12.2020 7.4
